--- a/esercizio/clock.html
+++ b/esercizio/clock.html
@@ -10,7 +10,7 @@
   <body>
     <div id="clock"></div>
     <button id="start" onclick="addTimer()">START</button>
-    <button id="reset" onclick="reset()">RESET</button>
+    <!-- <button id="reset" onclick="reset()">RESET</button> -->
     <script src="./clock.js"></script>
   </body>
 </html>
